active-regeneration mapping

--- a/REGENERATION_PROD.ipynb
+++ b/REGENERATION_PROD.ipynb
@@ -4653,6 +4653,67 @@
    "source": [
     "X_Time[-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UTC time: 2021-05-19 09:28:43+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timezone\n",
+    "\n",
+    "def convert_ms_to_utc(ms):\n",
+    "    # Convert milliseconds to seconds\n",
+    "    seconds = ms / 1000.0\n",
+    "    # Create a datetime object from the seconds, with UTC timezone\n",
+    "    utc_time = datetime.utcfromtimestamp(seconds).replace(tzinfo=timezone.utc)\n",
+    "    return utc_time\n",
+    "\n",
+    "milliseconds = 1621416523000  # Example milliseconds\n",
+    "\n",
+    "utc_time = convert_ms_to_utc(milliseconds)\n",
+    "print(\"UTC time:\", utc_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Milliseconds since the epoch: 1715964960000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timezone\n",
+    "\n",
+    "def convert_utc_to_ms(utc_time):\n",
+    "    # Convert UTC time to POSIX timestamp\n",
+    "    posix_timestamp = utc_time.timestamp()\n",
+    "    # Convert POSIX timestamp to milliseconds\n",
+    "    milliseconds = int(posix_timestamp * 1000)\n",
+    "    return milliseconds\n",
+    "\n",
+    "# Example UTC time\n",
+    "utc_time = datetime.utcnow().replace(tzinfo=timezone.utc)\n",
+    "utc_time = datetime.fromisoformat('2024-05-17 16:56:30+00:00')\n",
+    "\n",
+    "\n",
+    "milliseconds = convert_utc_to_ms(utc_time)\n",
+    "print(\"Milliseconds since the epoch:\", milliseconds)\n"
+   ]
   }
  ],
  "metadata": {
