Calibration Logic Updated

--- a/REGENERATION_PROD.ipynb
+++ b/REGENERATION_PROD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,13 +49,294 @@
        "'3719'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[\"additional_info\"]['dpf_soot_loading_pid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://old-data-downloader.intangles-aws-us-east-1.intangles.us/download/1281385415655292928/1714454580000/1716661740000\n",
+      "this is the response:  <Response [504]>\n",
+      "WRITING...........\n"
+     ]
+    }
+   ],
+   "source": [
+    "vehicle_ID = 1281385415655292928\n",
+    "Start_TS = str(int(1714454580000))\n",
+    "End_TS   = str(int(1716661740000))\n",
+    "\n",
+    "\n",
+    "local_filename = 'D:/products/EBT_VEHICLE_DATA_FOR_TESTING/'  + str(vehicle_ID) + \"_\" + str(Start_TS) + \"_\" + str(End_TS)\n",
+    "\n",
+    "# for Indian vehicles use the API 'http://data-download.intangles.com:1883/download/'\n",
+    "# for US vehicles use the API http://algo-internal-apis.intangles-aws-us-east-1.intangles.us:1883/download/\n",
+    "URL = 'https://old-data-downloader.intangles-aws-us-east-1.intangles.us/download/' + str(vehicle_ID) +  \"/\" + str(Start_TS) + \"/\" + str(End_TS)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(URL)\n",
+    "\n",
+    "r = requests.get(URL,stream=True)\n",
+    "\n",
+    "print(\"this is the response: \", r)\n",
+    "\n",
+    "with open(local_filename, 'wb') as f:\n",
+    "    for chunk in r.iter_content(chunk_size=1024):\n",
+    "        if chunk:\n",
+    "            print(\"WRITING...........\")\n",
+    "            f.write(chunk)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt \n",
+    "import os\n",
+    "import json\n",
+    "import requests\n",
+    "import datetime\n",
+    "\n",
+    "# C:\\Users\\Harleen.Kaur\\Downloads\\Get_Thresholds.py\n",
+    "\n",
+    "def find_nearest(array, value):\n",
+    "    array = np.asarray(array)\n",
+    "    idx = (np.abs(array - value)).argmin()\n",
+    "    return array[idx],idx\n",
+    "\n",
+    "def extract_PID_data(data, PROTOCOL,LABEL):\n",
+    "    \n",
+    "    if (PROTOCOL == 'SAE'):\n",
+    "\n",
+    "        if LABEL == 'IMAP':\n",
+    "            PID_TAG = 'spn_106_avg'\n",
+    "        elif LABEL == 'ENGINE LOAD':\n",
+    "            PID_TAG = 'spn_92_avg'\n",
+    "        elif LABEL == 'ENGINE RPM':\n",
+    "            PID_TAG = 'spn_190_avg'\n",
+    "        elif LABEL == 'FUEL RATE':\n",
+    "            PID_TAG = 'spn_183_avg'\n",
+    "        elif LABEL == 'MAF':\n",
+    "            PID_TAG = 'spn_132_avg'\n",
+    "        elif LABEL == 'BOOST':\n",
+    "            PID_TAG = 'spn_102_avg'\n",
+    "        elif LABEL == 'BAROMETER':\n",
+    "            PID_TAG = 'spn_108_avg'\n",
+    "        elif LABEL == 'THROTTLE':\n",
+    "            PID_TAG = 'spn_91_avg'\n",
+    "        elif LABEL == 'ATGMF': # Eaxuast Gas Flow Rate\n",
+    "            PID_TAG = 'spn_3236_avg'\n",
+    "        elif LABEL == 'DPFDP': # DPF Diffrential Pressure (across DPF)\n",
+    "            PID_TAG = 'spn_3251_avg'\n",
+    "        elif LABEL == 'SCRT':   # SCR Catalyst Temperature Before Catalyst (DPF out)\n",
+    "            PID_TAG = 'spn_4360_avg'\n",
+    "        elif LABEL == 'SPEED': # Wheep based Vehicle Speed\n",
+    "            PID_TAG = 'spn_84_avg'\n",
+    "        elif LABEL == 'DPFINT':# DPF in Temperature Before DPF (DOC out)\n",
+    "            PID_TAG = 'spn_3250_avg' #4766\n",
+    "        elif LABEL == 'IS': #  regen inhibited\n",
+    "            PID_TAG = 'spn_3703_avg'        \n",
+    "        elif LABEL == 'FUEL USE': #  Total fuel used (high precision)\n",
+    "            PID_TAG = 'spn_5054_avg'        \n",
+    "        elif LABEL == 'DISTANCE': #  Total distance travelled (high precision)\n",
+    "            PID_TAG = 'spn_917_avg' # 245\n",
+    "        elif LABEL == 'SOOTLOAD':\n",
+    "            PID_TAG = 'spn_5466_avg' # 245 #3719 generic check       \n",
+    "        elif LABEL == 'ACTIVEREGEN':\n",
+    "            PID_TAG = 'spn_3700_avg' # 245\n",
+    "        elif LABEL == 'PEDAL':\n",
+    "            PID_TAG = 'spn_91_avg' # 245  \n",
+    "        elif LABEL == 'LOAD':\n",
+    "            PID_TAG = 'spn_92_avg' # 245      \n",
+    "\n",
+    "    elif(PROTOCOL == 'ISO'):\n",
+    "\n",
+    "        if LABEL == 'IMAP':\n",
+    "            PID_TAG = '87BC'#MODIFY the \"if PID_TAG in State1:\" loop (append for loop on top)  \n",
+    "        elif LABEL == 'ENGINE LOAD':\n",
+    "            PID_TAG = '04'\n",
+    "        elif LABEL == 'ENGINE RPM':\n",
+    "            PID_TAG = '0C'\n",
+    "        elif LABEL == 'FUEL RATE':\n",
+    "            PID_TAG = '5E'\n",
+    "        elif LABEL == 'MAF':\n",
+    "            PID_TAG = '10'\n",
+    "        elif LABEL == 'BOOST':\n",
+    "            PID_TAG = '102'\n",
+    "        elif LABEL == 'BAROMETER':\n",
+    "            PID_TAG = '33'\n",
+    "        elif LABEL == 'THROTTLE':\n",
+    "            PID_TAG = '49'#MODIFY the \"if PID_TAG in State1:\" loop (append for loop on top)\n",
+    "        elif LABEL == 'DPFDP': # DPF Diffrential Pressure (across DPF)\n",
+    "            PID_TAG = '7A'\n",
+    "        elif LABEL == 'DPFDP': # DPF Diffrential Pressure (across DPF)\n",
+    "            PID_TAG = '7A'    \n",
+    "\n",
+    "    #print(LABEL)\n",
+    "    print(\"PID TAG is-->\" + LABEL + \" ,\" +PROTOCOL,\"Mapping is --->\", PID_TAG)\n",
+    "\n",
+    "   \n",
+    "\n",
+    "    Time_vec = []\n",
+    "    Val_vec = []\n",
+    "    #print(len(data[0]))\n",
+    "    #print(len(data))\n",
+    "\n",
+    "    for data_cnt in range(0,len(data)):\n",
+    "        if \"pids\" in data[data_cnt]:\n",
+    "            if len(data[data_cnt]['pids'])>0:\n",
+    "                for sub_pid_cnt in range(0,len(data[data_cnt]['pids'])):  #this loop\n",
+    "                    State = data[data_cnt]['pids'][sub_pid_cnt]\n",
+    "                    #print(State)\n",
+    "                    #print(data_cnt)\n",
+    "                    #for state_cnt in range(0,len(State)):\n",
+    "                    if PID_TAG in State:\n",
+    "                        #print(\"--------------------------------------------IN----------------------------------\")\n",
+    "                        Time_vec.append(np.array(State[PID_TAG]['timestamp'], dtype=np.int64))\n",
+    "                        Val_vec.append(np.array(State[PID_TAG]['value'], dtype=float))\n",
+    "\n",
+    "    print(\"Number of time stamp avilables are--->\",len(Val_vec))\n",
+    "\n",
+    "    \n",
+    "    return Time_vec,Val_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "import json\n",
+    "import requests\n",
+    "import datetime\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # ... (rest of the code remains the same)\n",
+    "    vehicle =  1281385415655292928\n",
+    "    #imei = 866834049482107 \n",
+    "    # reading the OBD-Data one hour prior and one-hour after the regeneration time\n",
+    "    Start_TS =  1714501800000  - 1*60*60*1000\n",
+    "    End_TS = 1716661740000 + 1*60*60*1000\n",
+    "\n",
+    "    OBD_data_path = 'https://old-data-downloader.intangles-aws-us-east-1.intangles.us/download/' + str(vehicle) +  \"/\" + str(Start_TS) + \"/\" + str(End_TS)\n",
+    "    r = requests.get(OBD_data_path, stream=True)\n",
+    "    OBD_data = r.json()\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    LABEL = 'DPFDP'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='markers', name=LABEL))\n",
+    "    fig.add_hline(y=7, line_color='red', line_dash='dash')\n",
+    "\n",
+    "    LABEL = 'DPFINT'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "    fig.add_hline(y=500, line_color='red', line_dash='dash')\n",
+    "\n",
+    "    LABEL = 'ATGMF'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'ENGINE RPM'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'THROTTLE'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'ENGINE LOAD'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'SPEED'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'IS'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'SOOTLOAD'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'PEDAL'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    LABEL = 'ACTIVEREGEN'\n",
+    "    X_Time, X_Value = extract_PID_data(OBD_data, 'SAE', LABEL)\n",
+    "    TS = [datetime.datetime.fromtimestamp((X_Time[cnt] + 19800*1000) / 1000.0, tz=datetime.timezone.utc) for cnt in range(0, len(X_Time))]\n",
+    "    fig.add_trace(go.Scatter(x=TS, y=X_Value, mode='lines', name=LABEL))\n",
+    "\n",
+    "    fig.update_layout(title_text=\"Vehicle Data\", xaxis_title=\"Time\", yaxis_title=\"Value\")\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp_pid = 'spn_3251_avg'\n",
+    "rpm_pid = 'spn_190_avg'\n",
+    "speed_pid = 'spn_84_avg'\n",
+    "soot_load_pid = 'spn_5466_avg'\n",
+    "Time = []\n",
+    "dp_inst_Value = []\n",
+    "rpm_inst_Value = []\n",
+    "speed_inst_Value =[]\n",
+    "for pac_idx in range(len(OBD_data)):\n",
+    "        if \"pids\" in OBD_data[pac_idx]:\n",
+    "            if len(OBD_data[pac_idx]['pids'])>0:\n",
+    "                for sub_pid_cnt in range(0,len(OBD_data[pac_idx]['pids'])):\n",
+    "                        State = OBD_data[pac_idx]['pids'][sub_pid_cnt]\n",
+    "                        # extracting DPFDP\n",
+    "                        if dp_pid in State:\n",
+    "                                Time.append(State[dp_pid]['timestamp'])\n",
+    "                                dp_inst_Value.append(State[dp_pid]['value'][0])\n",
+    "                        # extracting RPM        \n",
+    "                        if rpm_pid in State:\n",
+    "                                rpm_inst_Value.append(State[rpm_pid]['value'][0])\n",
+    "                        # extracting SPEED       \n",
+    "                        if speed_pid in State:\n",
+    "                                speed_inst_Value.append(State[speed_pid]['value'][0])"
    ]
   },
   {
